# pisensor-client

./: .gitignore  README.md  pyproject.toml  raspiclient_config.ini
src/piclient/: camera.py  cli.py  client.py  config.py  sensor.py  temperature.py  timelapse.py
src/piclient/sensors/: __init__.py  base.py  camera.py  soil_humidity.py  temperature.py
