[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "piclient"
version = "0.2.0"
authors = [
  { name="JF", email="jf@foo.bar" },
]
description = "python client for raspi (zero)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[
    "paho-mqtt",
    "picamera"
]

[project.scripts]
piclient = "piclient:cli.main"
